# src/app.controller.ts
@@ -1,4 +1,33 @@
-import { Controller } from '@nestjs/common';
+import { Controller, Request, Post, UseGuards, Get, Body } from '@nestjs/common';
+import { JwtAuthGuard } from './auth/jwt-auth.guard';
+import { AuthService } from './auth/auth.service';
+import { LocalAuthGuard } from './auth/local-auth.guard';
+import { CreateUserDto } from './user/dto/create-user.dto';
+import { User } from './user/entities/user.entity';
+import { UserService } from './user/user.service';
 
 @Controller()
-export class AppController {}
+export class AppController {
+  constructor(
+    private readonly authService: AuthService,
+    private readonly userService: UserService,
+    ) {}
+
+  @Post('auth/signup')
+  async create(@Body() createUserDto: CreateUserDto): Promise<User> {
+    return await this.userService.create(createUserDto);
+  }
+
+  @UseGuards(LocalAuthGuard)
+  @Post('auth/login')
+  async login(@Request() req) {
+    console.log(`AppController.login(). req.user=${req.user}`);
+    return this.authService.login(req.user);
+  }
+
+  @UseGuards(JwtAuthGuard)
+  @Get('auth/restricted')
+  async restricted(@Request() req) {
+    return {'message': 'finally, you can see restricted area! Congratulations.'};
+  }
+}
